--- a/dictionary-web-service/web/WEB-INF/web.xml
+++ b/dictionary-web-service/web/WEB-INF/web.xml
@@ -3,4 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
+
+
+    <!--<servlet>-->
+        <!--<servlet-name>service-request-handler</servlet-name>-->
+        <!--<servlet-class>ie.gmit.sw.ds.DictionaryServiceHandler</servlet-class>-->
+        <!--<load-on-startup>0</load-on-startup>-->
+    <!--</servlet>-->
+
+    <!--<servlet-mapping>-->
+        <!--<servlet-name>service-request-handler</servlet-name>-->
+        <!--<url-pattern>/findWord</url-pattern>-->
+    <!--</servlet-mapping>-->
 </web-app>
